# RAG-Chatbot

./: README.md  Read.md  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
src/chatbot/: chunker.py  crew.py  evaluator.py  main.py  pinecone_vectorstore.py  test.py  test_crew.py  vectorstore.py
src/chatbot/config/: agents.yaml  tasks.yaml
src/chatbot/tools/: custom_tool.py
