[project]
name = "chatbot"
version = "0.1.0"
description = "chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
chatbot = "chatbot.main:run"
run_crew = "chatbot.main:run"
train = "chatbot.main:train"
replay = "chatbot.main:replay"
test = "chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
